--- a/scanner.html
+++ b/scanner.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
   <meta charset="UTF-8" />
   <title>QR Client Scanner</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://unpkg.com/html5-qrcode"></script>
 </head>
 <body>
   <h1>Scan een QR-code</h1>
+
+  <!-- QR-scanner container -->
   <div id="reader" style="width:300px;"></div>
-  <div id="result"></div>
 
-  <!-- Plaats voor QR-scanner -->
-<div id="reader" style="width: 300px;"></div>
+  <!-- Algemene foutmeldingen/resultaten -->
+  <pre id="result" style="margin-top: 20px; background-color: #f5f5f5; padding: 10px;"></pre>
 
-<!-- Resultaat tonen -->
-<pre id="result" style="margin-top: 20px; background-color: #f5f5f5; padding: 10px;"></pre>
+  <!-- Clientgegevens -->
+  <div id="result-container" style="margin-top: 20px;">
+    <h3>Cliëntgegevens</h3>
+    <p><strong>Naam:</strong> <span id="name"></span></p>
+    <p><strong>Cliënt ID:</strong> <span id="clientId"></span></p>
+    <p><strong>Geboortedatum:</strong> <span id="geboortedatum"></span></p>
+    <p><strong>Kamernummer:</strong> <span id="kamernummer"></span></p>
+    <p><strong>Afdeling:</strong> <span id="afdeling"></span></p>
+    <p><strong>Allergieën:</strong> <span id="allergieën"></span></p>
+    <p><strong>Reanimeren:</strong> <span id="reanimeren"></span></p>
+  </div>
 
-<div id="result-container" style="margin-top: 20px;">
-  <h3>Cliëntgegevens</h3>
-  <p><strong>Naam:</strong> <span id="name"></span></p>
-  <p><strong>Cliënt ID:</strong> <span id="CliëntID"></span></p>
-  <p><strong>kamernummer:</strong> <span id="kamernummer"></span></p>
-  <p><strong>afdeling:</strong> <span id="afdeling"></span></p>
-  <p><strong>allergieën:</strong> <span id="allergieën"></span></p>
-</div>
+  <!-- Knoppen voor notities en rapportages -->
+  <button id="showNotesBtn" style="display:none; margin-top: 10px;">Toon medische notities</button>
+  <div id="medicalNotes" style="margin-top: 20px;"></div>
 
+  <button id="showReportsBtn" style="display:none; margin-top: 10px;">Toon rapportages</button>
+  <div id="reports" style="margin-top: 20px;"></div>
 
-<!-- QR-lib includen -->
-<script src="https://unpkg.com/html5-qrcode"></script>
-<script src="scanner.js"></script>
-
-
-  <script src="https://unpkg.com/html5-qrcode"></script> <!-- QR scanner -->
+  <!-- Jouw script -->
   <script src="scanner.js"></script>
 </body>
 </html>
