Feat: noodcontacten ophalen en weergeven

--- a/scanner.html
+++ b/scanner.html
@@ -34,6 +34,9 @@
   <button id="showReportsBtn" style="display:none; margin-top: 10px;">Toon rapportages</button>
   <div id="reports" style="margin-top: 20px;"></div>
 
+  <button id="showEmergencyContactBtn" style="display:none; margin-top: 10px;">Toon noodcontact</button>
+  <div id="emergencyContact" style="margin-top: 20px;"></div>
+
   <!-- Jouw script -->
   <script src="scanner.js"></script>
 </body>
