Feat: camera selector toegevoegd
Camera selector toegevoegd en kleine aanpassing aan comments

--- a/scanner.html
+++ b/scanner.html
@@ -27,7 +27,7 @@
     <p><strong>Reanimeren:</strong> <span id="reanimeren"></span></p>
   </div>
 
-  <!-- Knoppen voor notities en rapportages -->
+  <!-- Knoppen -->
   <button id="showNotesBtn" style="display:none; margin-top: 10px;">Toon medische notities</button>
   <div id="medicalNotes" style="margin-top: 20px;"></div>
 
@@ -37,7 +37,9 @@
   <button id="showEmergencyContactBtn" style="display:none; margin-top: 10px;">Toon noodcontact</button>
   <div id="emergencyContact" style="margin-top: 20px;"></div>
 
-  <!-- Jouw script -->
+  <button id="switchCameraBtn">Camera wisselen</button>
+  <!-- scripts -->
   <script src="scanner.js"></script>
+  <script src="cameraSelect.js"></script>
 </body>
 </html>
