--- a/client.html
+++ b/client.html
@@ -53,6 +53,7 @@
     </div>
 
     <!-- scripts -->
+    <script src="config.js"></script>
     <script src="client.js"></script>
   </body>
 </html>
