--- a/scanner.html
+++ b/scanner.html
@@ -28,6 +28,7 @@
       </footer>
     </div>
     <!-- scripts -->
+     <script src="config.js"></script>
     <script src="scanner.js"></script>
   </body>
 </html>
