Feat: added disabled attributes
disabled attributes added to buttons where needed

--- a/client.html
+++ b/client.html
@@ -13,9 +13,11 @@
       <header class="client-header">
         <img src="Images/Logo-site-blok.png" alt="Logo Anker" id="logo" />
         <div class="emergency-wrapper">
-          <button id="showEmergencyContactBtn" class="header-button">
+
+          <button id="showEmergencyContactBtn" class="header-button" disabled>
             Noodcontact
           </button>
+
           <div id="emergencyContact" class="emergency-contact hidden"></div>
         </div>
       </header>
@@ -36,13 +38,13 @@
         </div>
 
         <!-- Knoppen -->
-        <button id="showNotesBtn">Medische notities</button>
+        <button id="showNotesBtn" disabled>Medische notities</button>
         <div id="medicalNotes"></div>
 
-        <button id="showReportsBtn">Rapportages</button>
+        <button id="showReportsBtn" disabled>Rapportages</button>
         <div id="reports"></div>
 
-        <button id="writeReportBtn">Rapportage maken</button>
+        <button id="writeReportBtn" disabled>Rapportage maken</button>
       </div>
 
       <footer>
